--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,9 +29,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^0.8.7
-  image: ^4.0.15
-  path_provider: ^2.0.13
+  image_picker: ^1.1.2
+  image: ^4.3.0
+  path_provider: ^2.1.4
+  win32: ^5.7.1
 
 dev_dependencies:
   flutter_test:
