--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,38 +4,38 @@ version: 0.0.9
 homepage: https://github.com/chatwoot/chatwoot-flutter-sdk
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_chat_ui: ^1.1.9
+  flutter_chat_ui: ^1.6.15
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  uuid: ^3.0.4
-  web_socket_channel: ^2.1.0
-  json_annotation: ^4.0.1
-  dio: ^4.0.0
-  equatable: ^2.0.3
-  riverpod: ^0.14.0+3
-  synchronized: ^3.0.0
-  intl: ^0.17.0
-  flutter_chat_types: ^2.4.0
-  stream_channel: ^2.1.0
-  async: ^2.5.0
-  webview_flutter: ^4.0.6
-  flutter_secure_storage: ^8.0.0
-  url_launcher: ^6.1.10
-  path_provider: ^2.0.13
-
+  uuid: ^4.5.1
+  web_socket_channel: ^3.0.1
+  json_annotation: ^4.9.0
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  riverpod: ^2.6.1
+  synchronized: ^3.3.0+3
+  intl: ^0.19.0
+  flutter_chat_types: ^3.6.2
+  stream_channel: ^2.1.2
+  async: ^2.11.0
+  webview_flutter: ^4.10.0
+  flutter_secure_storage: ^9.2.2
+  url_launcher: ^6.3.1
+  path_provider: ^2.1.4
+  win32: ^5.7.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.3.2
-  json_serializable: ^6.6.1
-  hive_generator: ^2.0.0
-  build_runner: ^2.3.3
+  mockito: ^5.4.4
+  json_serializable: ^6.8.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.13
   flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
