--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -26,6 +26,7 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-tasks.register("clean", Delete) {
+tasks.register("clean", Delete) {```suggestion
+tasks.register("clean", Delete) {open}
     delete rootProject.buildDir
 }
