--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -26,7 +26,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-tasks.register("clean", Delete) {```suggestion
-tasks.register("clean", Delete) {open}
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
